# conversational-ai

./: .env.example  LICENSE  README.md  README_MCP.md  examples.py  main.py  pyproject.toml  ruff.toml  run_mcp_server.py  run_server.py
src/ai/: agent_manager.py
src/core/: assistant.py  conversation_manager.py
src/helpers/: input_parser.py  redis.py  ui_helper.py
src/mcp/: server.py  simple_server.py
src/scripts/: agents.py  agents_legacy.py
src/url_shortner/: server.py  shortner.py
