[project]
name = "pydantic-ai-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-ai[openai]>=1.7.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.14.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
